2008-08-29  Alexandru Harsanyi  <aharsanyi@ImmersiveTechnologies.com>

	* vc-clearcase.el (vc-clearcase-print-log): only print the history
	of the current branch by default.  Print full history when the
	prefix arg is specified.

2008-08-26  Alexandru Harsanyi  <aharsanyi@ImmersiveTechnologies.com>

	* vc-clearcase.el (clearcase-edcs-font-lock-keywords): new
	variable
	(clearcase-edcs-mode-syntax-table): new variable
	(clearcase-edcs-mode): add proper syntax highlighting to
	configspecs.

2008-08-22  Alexandru Harsanyi  <aharsanyi@ImmersiveTechnologies.com>

	* ucm.el (ucm-lsact-activity-pp): don't print the owner of the
	activity.
	(ucm-actb-ediff-command): new function
	(ucm-actb-mode-map): add binding for `ucm-actb-ediff-command'

	* vc-clearcase.el (vc-clearcase-cancel-version): In a snapshot
	view, don't delete the file before updating it; also use "update
	-overwrite -force"

2008-07-31  Alexandru Harsanyi  <aharsanyi@ImmersiveTechnologies.com>

	* ucm.el (ucm-actb-visit-item-command): new function
	(ucm-actb-mode-map): add binding for `ucm-actb-visit-item-command'

2008-07-29  Alexandru Harsanyi  <aharsanyi@ImmersiveTechnologies.com>

	* ucm.el (ucm-list-activities): DIR is now optional and defaults
	to the current directory.  Use `pop-to-buffer' to display the
	activtiy list buffer.
	(ucm-previous-activity-link-handler): set `inhibit-read-only' to t
	when operating on the buffer.
	(ucm-browse-activity): Use `pop-to-buffer' to display the activtiy
	browser buffer.

2008-07-25  Alexandru Harsanyi  <aharsanyi@ImmersiveTechnologies.com>

	* vc-clearcase.el (vc-clearcase-previous-revision): renamed from
	`vc-clearcase-previous-version'
	(vc-clearcase-next-revision): renamed from
	`vc-clearcase-next-version'

2008-07-25  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el
	(vc-dired-hook): advice removed
	(clearcase-dir-state-process-current-line)
	(clearcase-dir-state-collect)
	(vc-clearcase-dir-state)
	(vc-clearcase-dired-state-info)